# ChangeLog for dev-python/logilab-common
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/logilab-common/ChangeLog,v 1.42 2009/06/04 13:01:39 idl0r Exp $

*logilab-common-0.41.0 (04 Jun 2009)

  04 Jun 2009; Christian Ruppert <idl0r@gentoo.org>
  -files/logilab-common-0.14.0-remove-broken-modutils-test.patch,
  -files/logilab-common-0.31.0-remove-broken-tests.patch,
  -logilab-common-0.39.0.ebuild, +logilab-common-0.41.0.ebuild,
  +files/logilab-common-0.41.0-remove-broken-tests.patch,
  -files/logilab-common-setup.py.patch:
  Version bump to 0.41.0. Cleanup.

  27 May 2009; Ferris McCormick <fmccor@gentoo.org>
  logilab-common-0.21.2.ebuild:
  Sparc stable, tests pass, needed for Bug #271014.

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  -logilab-common-0.9.3.ebuild, -logilab-common-0.15.0.ebuild,
  -logilab-common-0.19.2.ebuild, -logilab-common-0.21.0.ebuild,
  -logilab-common-0.31.0.ebuild:
  Remove ancient versions

*logilab-common-0.39.0-r1 (18 Apr 2009)

  18 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  +files/logilab-common-0.39.0-recursion.patch,
  +logilab-common-0.39.0-r1.ebuild:
  Small fix by idl0r. Now astng and pylint shouldn't hit recursion limits
  anymore.

*logilab-common-0.39.0 (18 Apr 2009)

  18 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  +files/logilab-common-0.39.0-remove-broken-tests.patch,
  +logilab-common-0.39.0.ebuild:
  Bump to 0.39.0. Nice test fixes from idl0r. Closes #261984.

*logilab-common-0.31.0 (13 May 2008)

  13 May 2008; Ali Polatel <hawking@gentoo.org>
  +files/logilab-common-0.31.0-remove-broken-tests.patch,
  +logilab-common-0.31.0.ebuild:
  Version bump. No need to patch files that we'll remove. Updated patch for
  b0rked tests.

  20 May 2007; Christian Faulhammer <opfer@gentoo.org>
  logilab-common-0.21.2.ebuild:
  stable amd64, bug 176201

  19 May 2007; nixnut <nixnut@gentoo.org> logilab-common-0.21.2.ebuild:
  Stable on ppc wrt bug 176201