@@ -6,8 +6,10 @@ AUX logilab-common-0.41.0-remove-broken-tests.patch 697 RMD160 bf3fa9c83abb0a471
 DIST logilab-common-0.21.2.tar.gz 121708 RMD160 f16470bd3c7d729e5e1da155d35d28d89d69c62c SHA1 1ca4e822749400458619cc6890d4aeeba277520c SHA256 11fcb8a7096e73b1be72f17427377f1693244dc0e3b071ce067560f45980780b
 DIST logilab-common-0.39.0.tar.gz 176629 RMD160 02de1650175e8c3e383c71f8e0aa935d2b132e87 SHA1 596657988e024d5d0286ba3a2a71f167eca9af1a SHA256 40dab682017bb399606a66d3f72c7906b61669ffcd113d096a7b7e1c9054550e
 DIST logilab-common-0.41.0.tar.gz 181593 RMD160 3edb5d3f27c125cc6d3d8dabc73f717a768667d4 SHA1 c08bb86b7d71851b630f906431c2ae697f40b847 SHA256 be083809adb9d161b43c05971032ce03c96d85d4d65fc383157c16f9f53d715a
+DIST logilab-common-0.43.0.tar.gz 184469 RMD160 0552632aa5cc6b723091e1a2ba3bf5163811231f SHA1 79df16737de87c95d4493ced3fc47e9e977e2928 SHA256 3fbbb2c9057dd8bdff6603616108392a015191817a63610d9f3bc6bfe4d4551d
 EBUILD logilab-common-0.21.2.ebuild 1684 RMD160 b0652f601a64a833002bad1ccfe5adb6b4e001f8 SHA1 cc0d188b6f46319dda66b3f018ca0e8c4f77e942 SHA256 50e3edd9907e84c4d0c474f52d19396f0e38295016d2b09d9db56919509df066
 EBUILD logilab-common-0.39.0-r1.ebuild 2326 RMD160 3ebac9d4abc72f2371e016125143d33fc7eca5eb SHA1 92a20ccec15294276256af772beff3a3bbce32f1 SHA256 60e2ae6d9074ffb3b716c166fab8adc60007d5b4d51feac6e953c5e3c5ec7ee0
 EBUILD logilab-common-0.41.0.ebuild 2157 RMD160 2636b35ae3c5728205071a69e604c47008cd5ba4 SHA1 ce17645026b135ba1f7b26226841489274429b8a SHA256 1667a250b574e80050bc8bf8bf285f12be69ff86ec86951519f782bcc87bb871
-MISC ChangeLog 7553 RMD160 253af2493953165310cba6f68d0f8c483f26f4fa SHA1 78ca803bb63098094a9a8b9ea178cad1dbe2667a SHA256 a1c60eb3382b21a9b7aaaca07253feda1e1ccca7443faf84ad19d565d3db09d4
+EBUILD logilab-common-0.43.0.ebuild 2175 RMD160 85274f31fe199116be00328970f06022a70f6985 SHA1 45ff8204e688141e4b29e53a32e4573ca6794509 SHA256 ea0c519cfbba9ffe8c0d46cf00d03de63818bcad3668e4a2c7b1a4a32b4ea726
+MISC ChangeLog 7753 RMD160 e605269aefa1e17959d35f054aba6a7ee8ceae6c SHA1 1f3694f6ad3a2d2f6d5c377ae8f6da7b870c52ee SHA256 04e0b0025d1393d612450455d5e7e23cdb8eab505f34d27f73c5bc5018b30a80
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
