@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/logilab-common
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/logilab-common/ChangeLog,v 1.42 2009/06/04 13:01:39 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/logilab-common/ChangeLog,v 1.43 2009/07/24 21:48:43 arfrever Exp $
+
+*logilab-common-0.43.0 (24 Jul 2009)
+
+  24 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +logilab-common-0.43.0.ebuild:
+  Version bump. Don't check FEATURES (bug #278955).
 
 *logilab-common-0.41.0 (04 Jun 2009)
 
